--- a/build.xml
+++ b/build.xml
@@ -53,7 +53,7 @@
 			<exclude name="**/*.java" />
 		</fileset>
 		<echo message="${ant.project.name}: ${ant.file}" />
-		<scalac scalacdebugging="true" destdir="bin" logging="verbose">
+		<scalac destdir="bin">
 			<src path="src" />
 			<exclude name="**/*.java" />
 			<classpath refid="LostVaults.classpath" />
