--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="libs/akka-actor_2.10-2.3.2.jar"/>
 	<classpathentry kind="lib" path="libs/config-1.2.0.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JUnit 4"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Scala Libraries [2.10.4]"/>
+	<classpathentry kind="lib" path="libs/scala-actors.jar" /
+	<classpathentry kind="lib" path="libs/scala-library.jar" />
+	<classpathentry kind="lib" path="libs/scala-reflect.jar" />
+	<classpathentry kind="lib" path="libs/scala-swing.jar" />
+	<classpathentry kind="lib" path="libs/junit.jar" />
+	<classpathentry kind="lib" path="libs/org.hamcrest.core_1.3.0.v201303031735.jar" />
 	<classpathentry kind="output" path="bin"/>
 </classpath>
