--- a/doc/ProposalSrc/Makefile
+++ b/doc/ProposalSrc/Makefile
@@ -3,4 +3,4 @@ build:
 	pdflatex lostvaults.tex
 	pdflatex lostvaults.tex
 	mv lostvaults.pdf ../Proposal/Lost\ Vaults\ Proposal.pdf
-	rm lostvaults.toc lostvaults.dvi lostvaults.aux
+	rm lostvaults.toc lostvaults.aux
