--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,7 @@
   <classpathentry kind="src" path="src"/>
   <classpathentry kind="lib" path="libs/akka-actor_2.10-2.3.2.jar"/>
   <classpathentry kind="lib" path="libs/config-1.2.0.jar"/>
-  <classpathentry kind="lib" path="libs/scala-actors.jar" /
+  <classpathentry kind="lib" path="libs/scala-actors.jar" />
   <classpathentry kind="lib" path="libs/scala-library.jar" />
   <classpathentry kind="lib" path="libs/scala-reflect.jar" />
   <classpathentry kind="lib" path="libs/scala-swing.jar" />
