--- a/doc/ProposalSrc/Makefile
+++ b/doc/ProposalSrc/Makefile
@@ -4,3 +4,8 @@ build:
 	pdflatex lostvaults.tex
 	mv lostvaults.pdf ../Proposal/Lost\ Vaults\ Proposal.pdf
 	rm lostvaults.toc lostvaults.aux
+	pdflatex networkmessages.tex
+	pdflatex networkmessages.tex
+	pdflatex networkmessages.tex
+	mv networkmessages.pdf ../Proposal/Network\ Messages.pdf
+	rm networkmessages.aux
