--- a/build.xml
+++ b/build.xml
@@ -37,24 +37,17 @@
 			</classpath>
 		</taskdef>
 		<mkdir dir="bin" />
-		<!--<copy includeemptydirs="false" todir="bin">
-			<fileset dir="src">
-				<exclude name="**/*.java" />
-			</fileset>
-		</copy> -->
 	</target>
 	<target name="clean">
 		<delete dir="bin" />
 	</target>
 	<target depends="clean" name="cleanall" />
-	<target depends="build-subprojects,build-project" name="build" />
-	<target name="build-subprojects" />
-	<target depends="init" name="build-project">
+	<target depends="init" name="build">
 		<fileset dir="src">
 			<exclude name="**/*.java" />
 		</fileset>
 		<echo message="${ant.project.name}: ${ant.file}" />
-		<scalac destdir="bin">
+		<scalac destdir="bin" scalacdebugging="true">
 			<src path="src" />
 			<exclude name="**/*.java" />
 			<classpath refid="LostVaults.classpath" />
