--- a/build.xml
+++ b/build.xml
@@ -18,7 +18,7 @@
 		<pathelement location="bin" />
 		<pathelement location="libs/akka-actor_2.10-2.3.2.jar" />
 		<pathelement location="libs/config-1.2.0.jar" />
-		<pathelement location="libs/akka-testkit_2.10-2.3.2.jar"/>
+		<pathelement location="libs/akka-testkit_2.10-2.3.2.jar" />
 		<path refid="Scalatest Libraries" />
 		<path refid="Scala Libraries [2.10.4].userclasspath" />
 	</path>
@@ -43,9 +43,6 @@
 	</target>
 	<target depends="clean" name="cleanall" />
 	<target depends="init" name="build">
-		<fileset dir="src">
-			<exclude name="**/*.java" />
-		</fileset>
 		<echo message="${ant.project.name}: ${ant.file}" />
 		<scalac destdir="bin" scalacdebugging="true">
 			<src path="src" />
@@ -55,11 +52,11 @@
 		<javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
 			<src path="src" />
 			<exclude name="**/*.scala" />
-			<exclude name="test/*" />
+			<exclude name="**/tests/*" />
 			<classpath refid="LostVaults.classpath" />
 		</javac>
 	</target>
-	<target depends="build" name="doc">
+	<target depends="init" name="doc">
 		<fileset dir="src">
 		</fileset>
 		<scaladoc destdir="doc/LostVaults">
