--- a/build.xml
+++ b/build.xml
@@ -37,6 +37,7 @@
 			</classpath>
 		</taskdef>
 		<mkdir dir="bin" />
+		<copy file="src/application.conf" tofile="bin/application.conf" />
 	</target>
 	<target name="clean">
 		<delete dir="bin" />
