--- a/build.xml
+++ b/build.xml
@@ -23,6 +23,7 @@
 		<path refid="Scala Libraries [2.10.4].userclasspath" />
 	</path>
 	<target name="init">
+		<echo message="${ant.project.name}: ${ant.file}" />
 		<taskdef resource="scala/tools/ant/antlib.xml">
 			<classpath>
 				<pathelement location="libs/scala-compiler.jar" />
@@ -42,27 +43,43 @@
 	<target name="clean">
 		<delete dir="bin" />
 	</target>
-	<target depends="init" name="build">
-		<echo message="${ant.project.name}: ${ant.file}" />
-		<scalac destdir="bin" scalacdebugging="true" deprecation="true" failonerror="false" force="false" classpathref="LostVaults.classpath">
+	<target depends="init,build_client,build_server" name="build" />
+	<target depends="init" name="build_server">
+		<scalac destdir="bin" scalacdebugging="true" deprecation="true" failonerror="false" force="false" classpathref="LostVaults.classpath" addparams="-language:postfixOps">
 			<src path="src/" />
-			<exclude name="**/*.java" />
+			<exclude name="**/server/*.java" />
+			<exclude name="**/client/*" />
 		</scalac>
 		<javac srcdir="src" debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
-			<exclude name="**/*.scala" />
+			<exclude name="**/server/*.scala" />
+			<exclude name="**/client/*" />
 			<classpath refid="LostVaults.classpath" />
 		</javac>
 	</target>
+	<target depends="init" name="build_client">
+			<scalac destdir="bin" scalacdebugging="true" deprecation="true" failonerror="false" force="false" classpathref="LostVaults.classpath" addparams="-language:postfixOps">
+				<src path="src/" />
+				<exclude name="**/client/*.java" />
+				<exclude name="**/server/*" />
+			</scalac>
+			<javac srcdir="src" debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
+				<exclude name="**/client/*.scala" />
+				<exclude name="**/server/*" />
+				<classpath refid="LostVaults.classpath" />
+			</javac>
+		</target>
 	<target depends="init" name="doc">
 		<fileset dir="src">
 		</fileset>
+		<delete dir="doc/LostVaults" />
+		<mkdir dir="doc/LostVaults" />
 		<scaladoc destdir="doc/LostVaults">
 			<src path="src" />
+			<exclude name="*.conf" />
 			<classpath refid="LostVaults.classpath" />
 		</scaladoc>
 	</target>
-	<target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects" />
-	<target depends="build" name="client" description="Build runnable client Jar File">
+	<target depends="build_client" name="client" description="Build runnable client Jar File">
 		<jar destfile="client.jar" basedir="bin/">
 			<include name="application.conf" />
 			<include name="lostvaults/*.class" />
@@ -75,7 +92,7 @@
 			</manifest>
 		</jar>
 	</target>
-	<target depends="build" name="server" description="Build runnable server Jar File">
+	<target depends="build_server" name="server" description="Build runnable server Jar File">
 		<jar destfile="server.jar" basedir="bin/">
 			<include name="application.conf" />
 			<include name="lostvaults/*.class" />
@@ -89,7 +106,7 @@
 		</jar>
 	</target>
 	<target name="run_client" depends="client" description="Build and run the client jar file.">
-		<java jar="client.jar" fork="false" />
+		<java jar="client.jar" fork="true" />
 	</target>
 	<target name="run_server" depends="server" description="Build and run the server jar file.">
 		<java jar="server.jar" fork="true" />
@@ -105,4 +122,5 @@
 			<!--<wildcard package="lostvaults.tests" /> -->
 		</scalatest>
 	</target>
+	<target name="rebuild_all" depends="clean,client,server" />
 </project>
