--- a/build.xml
+++ b/build.xml
@@ -91,7 +91,7 @@
 		</scaladoc>
 	</target>
 	<target depends="build_client" name="client" description="Build runnable client Jar File">
-		<copy file="src/client_application.conf" tofile="bin/application.conf" />
+		<copy file="src/client_application.conf" tofile="bin/application.conf" force="true"/>
 		<jar destfile="client.jar" basedir="bin/">
 			<include name="application.conf" />
 			<include name="lostvaults/*.class" />
@@ -105,7 +105,7 @@
 		</jar>
 	</target>
 	<target depends="build_server" name="server" description="Build runnable server Jar File">
-		<copy file="src/server_application.conf" tofile="bin/application.conf" />
+		<copy file="src/server_application.conf" tofile="bin/application.conf" force="true"/>
 		<jar destfile="server.jar" basedir="bin/">
 			<include name="application.conf" />
 			<include name="lostvaults/*.class" />
@@ -126,7 +126,7 @@
 	</target>
 	<target name="build_jars" depends="client,server" />
 	<target name="run_tests" depends="build" description="Build and run scala tests.">
-		<copy file="src/server_application.conf" tofile="bin/application.conf" />
+		<copy file="src/server_application.conf" tofile="bin/application.conf" force="true" />
 		<scalatest wildcard="lostvaults.tests">
 			<runpath>
 				<pathelement location="bin/" />
