--- a/build.xml
+++ b/build.xml
@@ -91,7 +91,7 @@
 		</scaladoc>
 	</target>
 	<target depends="build_client" name="client" description="Build runnable client Jar File">
-		<copy file="src/client_application.conf" tofile="bin/application.conf" force="true"/>
+		<copy file="src/client_application.conf" tofile="bin/application.conf" force="true" overwrite="true" />
 		<jar destfile="client.jar" basedir="bin/">
 			<include name="application.conf" />
 			<include name="lostvaults/*.class" />
@@ -105,7 +105,7 @@
 		</jar>
 	</target>
 	<target depends="build_server" name="server" description="Build runnable server Jar File">
-		<copy file="src/server_application.conf" tofile="bin/application.conf" force="true"/>
+		<copy file="src/server_application.conf" tofile="bin/application.conf" force="true" overwrite="true" />
 		<jar destfile="server.jar" basedir="bin/">
 			<include name="application.conf" />
 			<include name="lostvaults/*.class" />
@@ -113,7 +113,7 @@
 			<include name="*.jar" />
 			<exclude name="lostvaults/test/*" />
 			<manifest>
-				<attribute name="Class-Path" value="libs/akka-actor_2.10-2.3.2.jar libs/config-1.2.0.jar libs/junit.jar libs/org.hamcrest.core_1.3.0.v201303031735.jar libs/scala-actors.jar libs/scala-library.jar libs/scala-reflect.jar libs/scala-swing.jar libs/slf4j-api-1.7.7.jar libs/slf4j-simple-1.7.7.jar libs/slick_2.10-2.0.2.jar /libs/sqlite-jdbc-3.7.2.jar" />
+				<attribute name="Class-Path" value="libs/akka-actor_2.10-2.3.2.jar libs/config-1.2.0.jar libs/junit.jar libs/org.hamcrest.core_1.3.0.v201303031735.jar libs/scala-actors.jar libs/scala-library.jar libs/scala-reflect.jar libs/scala-swing.jar libs/slf4j-api-1.7.7.jar libs/slf4j-simple-1.7.7.jar libs/slick_2.10-2.0.2.jar libs/sqlite-jdbc-3.7.2.jar" />
 				<attribute name="Main-Class" value="lostvaults.server.Main" />
 			</manifest>
 		</jar>
@@ -126,7 +126,7 @@
 	</target>
 	<target name="build_jars" depends="client,server" />
 	<target name="run_tests" depends="build" description="Build and run scala tests.">
-		<copy file="src/server_application.conf" tofile="bin/application.conf" force="true" />
+		<copy file="src/server_application.conf" tofile="bin/application.conf" force="true" overwrite="true" />
 		<scalatest wildcard="lostvaults.tests">
 			<runpath>
 				<pathelement location="bin/" />
