--- a/doc/src/Makefile
+++ b/doc/src/Makefile
@@ -3,7 +3,7 @@ draft:
 	pdflatex draft.tex
 	pdflatex draft.tex
 	mv draft.pdf ../pdf/Slutrapport_Draft.pdf
-	rm *.toc *.aux *.log *.lof 
+	-rm *.toc *.aux *.log *.lof 
 
 proposal:
 	pdflatex proposal.tex
@@ -14,4 +14,10 @@ proposal:
 	pdflatex networkmessages.tex
 	pdflatex networkmessages.tex
 	mv networkmessages.pdf ../pdf/Network\ Messages.pdf
-	rm *.toc *.aux *.log *.lof 
+	-rm *.toc *.aux *.log *.lof 
+
+review:
+	pdflatex review.tex
+	pdflatex review.tex
+	mv review.pdf ../pdf/OSM_2014_group_04_review_of_group_20_draft_final_project_report.pdf
+	-rm *.toc *.aux *.log *.lof
